Fix snackbar button alignment

--- a/src/shared/components/snackbar.less
+++ b/src/shared/components/snackbar.less
@@ -45,6 +45,7 @@
   button {
     display: flex;
     flex: 0 0 24px;
+    align-self: center;
     margin: 0px;
     padding: 0px;
     border: none;
